--- a/Web.config
+++ b/Web.config
@@ -13,7 +13,8 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <connectionStrings>
-    <add name="WSTContext" connectionString=" user id=wanshitong;password=wanshitongpassword;Data Source=121.14.212.249,1456;Initial Catalog=wangshitongdb;Integrated Security=True;" />
+    <add name="WSTContext" connectionString=" uid=wanshitong; pwd=wanshitongpassword; Initial Catalog=wanshitongdb; Data Source=121.14.212.249,1456;Persist Security Info=True"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
