--- a/Wst.csproj
+++ b/Wst.csproj
@@ -66,9 +66,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin\Enter.aspx" />
+    <Content Include="Admin\User.aspx" />
+    <Content Include="Admin\UserList.aspx" />
     <Content Include="css\Admin.css" />
     <Content Include="css\Main.css" />
-    <Content Include="Web.config" />
+    <Content Include="Js\jquery-1.11.1.js" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Admin\Admin.Master.cs">
@@ -85,9 +90,25 @@
     <Compile Include="Admin\Enter.aspx.designer.cs">
       <DependentUpon>Enter.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Admin\User.aspx.cs">
+      <DependentUpon>User.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\User.aspx.designer.cs">
+      <DependentUpon>User.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\UserList.aspx.cs">
+      <DependentUpon>UserList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\UserList.aspx.designer.cs">
+      <DependentUpon>UserList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Users.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Model\IEntity.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\WstContext.cs" />
     <Compile Include="Service\UserService.cs" />
     <Compile Include="Top.Master.cs">
       <DependentUpon>Top.Master</DependentUpon>
